--- a/sales.html
+++ b/sales.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Salmon Cookies Sales</title>
 </head>
-<body class="sales" id="salesBody">
-    <h1>Sales Reports</h1>
+<body id="salesBody">
+    <h1>Sales Projections</h1>
 </body>
 <script src="js/app.js"></script>
 </html>
