--- a/sales.html
+++ b/sales.html
@@ -11,7 +11,7 @@
     <title>Salmon Cookies Sales</title>
 </head>
 <body id="salesBody">
-    <h1>Sales Projections</h1>
+    <h1>Projections</h1>
 </body>
 <script src="js/app.js"></script>
 </html>
