added control curve functionality

--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,12 @@
 </head>
 <body id="salesBody">
     <h1>Projections</h1>
+    <section id="salesProjections">
+        <h2>Sales Projections</h2>
+    </section>
+    <section id="staffingProjections">
+        <h2>Staffing Projections</h2>
+    </section>
 </body>
-<script src="js/app.js"></script>
+<script src="js/projections.js"></script>
 </html>
