styled home page

--- a/sales.html
+++ b/sales.html
@@ -18,6 +18,7 @@
     <section id="staffingProjections">
         <h2>Staffing Projections</h2>
     </section>
+    <a href="index.html">Return to Home Page</a>
 </body>
 <script src="js/projections.js"></script>
 </html>
